--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
 .DS_Store
 .AppleDouble
 .LSOverride
@@ -45,3 +38,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+**/node_modules/**
+**.DS_Store**
+**Thumbs.db**
+**.editorconfig**
+**.ftppass**
+**.grunt**
